Deployment/exploring.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exploring-deployment
  labels:
    app: exploring
spec:
  replicas: 3
  selector:
    matchLabels:
      app: exploring
  template:
    metadata:
      labels:
        app: exploring
    spec:
      volumes:
        - name: google-cloud-key
          secret:
            secretName: firestore-key
      containers:
        - name: exploring
          image: # CREDENTIALS
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: google-cloud-key
              mountPath: /var/secrets/google
---
apiVersion: v1
kind: Service
metadata:
  name: exploring-service
  labels:
    app: exploring
spec:
  type: NodePort
  selector:
    app: exploring
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
