Deployment/firestore.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firestore-deployment
  labels:
    app: firestore
spec:
  replicas: 3
  selector:
    matchLabels:
      app: firestore
  template:
    metadata:
      labels:
        app: firestore
    spec:
      volumes:
        - name: google-cloud-key
          secret:
            secretName: firestore-key
      containers:
        - name: firestore
          image: # CREDENTIALS
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: google-cloud-key
              mountPath: /var/secrets/google
---
apiVersion: v1
kind: Service
metadata:
  name: firestore-service
  labels:
    app: firestore
spec:
  type: ClusterIP
  selector:
    app: firestore
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
