Deployment/users.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-deployment
  labels:
    app: users
spec:
  replicas: 3
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      volumes:
        - name: google-cloud-key
          secret:
            secretName: firestore-key
      containers:
        - name: users
          image: # CREDENTIALS
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: google-cloud-key
              mountPath: /var/secrets/google
---
apiVersion: v1
kind: Service
metadata:
  name: users-service
  labels:
    app: users
spec:
  type: NodePort
  selector:
    app: users
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
